Dynegy/src/objects/LDC_Vendor__c.object
<CustomObject>
    <description>Utility Vendor for LDC</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <description>Utility vendor DUNS</description>
        <label>DUNS</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <label>Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <picklist>
            <picklistValues>
                <fullName>ESG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reciptent_DUNS__c</fullName>
        <label>Reciptent DUNS</label>
        <picklist>
            <picklistValues>
                <fullName>49050839</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <label>Service State</label>
        <picklist>
            <picklistValues>
                <fullName>AK         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL          </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ          </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT          </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE          </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL           </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI           </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA           </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID           </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN          </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS          </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY          </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA          </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA        </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD        </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI          </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN        </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO        </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE         </fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <globalPicklist>Service_Territory</globalPicklist>
        <label>Service Territory</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Field needed for EDI integration.</description>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Code__c</fullName>
        <label>Utility Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Type__c</fullName>
        <description>Types of LDC Vendor</description>
        <label>Vendor Type</label>
        <picklist>
            <picklistValues>
                <fullName>ESP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Reader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Agent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LDC Vendor</label>
    <nameField>
        <label>LDC Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDC Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Service_Territory_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(TEXT( Service_Territory__c )))</errorConditionFormula>
        <errorDisplayField>Service_Territory__c</errorDisplayField>
        <errorMessage>Service Territory is required</errorMessage>
    </validationRules>
</CustomObject>